--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       }
       scriptLoaded = true;
       var scriptTag = document.createElement('script');
-      scriptTag.src = 'main.dart.js';
+      scriptTag.src = '/lenais-inventaire.github.io/main.dart.js';
       scriptTag.type = 'application/javascript';
       document.body.append(scriptTag);
     }
