--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <title>lenais_inventaire_fournitures</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/lenais-inventaire.github.io/manifest.json">
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
