--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2631465588';
+    var serviceWorkerVersion = '3600407429';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
@@ -39,7 +39,7 @@
       }
       scriptLoaded = true;
       var scriptTag = document.createElement('script');
-      scriptTag.src = '/lenais-inventaire.github.io/main.dart.js';
+      scriptTag.src = '="/lenais-inventaire.github.io/main.dart.js';
       scriptTag.type = 'application/javascript';
       document.body.append(scriptTag);
     }
